# OTRaPy

./: .gitignore  README.md  RamanSolver.py  RunFit.py  pyproject.toml  requirements.txt  setup.py  utils.py
OTRaPy/: PeakAnalysis.py  RamanSolver.py  utils.py
OTRaPy/DataAnalysis/: PeakAnalysis.py  ProcessedData
examples/: IntroExample.ipynb  Literature_Examples.ipynb
scripts/: RunFit.py
src/OTRaPy/: RamanSolver.py  utils.py
src/OTRaPy/DataAnalysis/: PeakAnalysis.py  ProcessedData.py
src/OTRaPy/Solvers/: analytic_solver.py
tests/: test_RamanSolver.py
tests/test_files/: cai_in.json  taube_in.json  zhang_in.json
